take out test link

--- a/promoNotifs.ipynb
+++ b/promoNotifs.ipynb
@@ -34,8 +34,7 @@
     "with open(\"slackIds.json\", \"r\") as file:\n",
     "    ids = json.load(file)\n",
     "\n",
-    "#####get link\n",
-    "oglink = 'https://docs.google.com/spreadsheets/d/10qWnWUXgM80aoz8KylK2UqV7lF2FEKI-VBR57r_E3oc/edit?usp=sharing'\n",
+    "oglink = 'INSERT LINK HERE'",
     "split_og = oglink.split('/')\n",
     "new_link = ''\n",
     "for i in range (0,6):\n",
