--- a/promoNotifs.ipynb
+++ b/promoNotifs.ipynb
@@ -34,7 +34,7 @@
     "with open(\"slackIds.json\", \"r\") as file:\n",
     "    ids = json.load(file)\n",
     "\n",
-    "oglink = 'INSERT LINK HERE'",
+    "oglink = 'INSERT LINK HERE'\n",
     "split_og = oglink.split('/')\n",
     "new_link = ''\n",
     "for i in range (0,6):\n",
