--- a/promoNotifs.ipynb
+++ b/promoNotifs.ipynb
@@ -12,6 +12,8 @@
     "import slack\n",
     "import json\n",
     "\n",
+    "#uses slack to tag users and notify them of their promo task\n",
+    "#key = user, value = task\n", 
     "def notify(key, value):\n",
     "    user = ids[key]\n",
     "    response = sc.chat_postMessage(\n",
@@ -20,19 +22,23 @@
     "    assert response[\"ok\"]\n",
     "    assert response[\"message\"][\"text\"] == 'Hey <@' + user + '>, please promo: ' + value + '!'\n",
     "    \n",
+    "#for users who have tasks on date, call notify\n",
     "def who_to_notif(df, date):\n",
     "    datedict = df.loc[:,date].to_dict()\n",
     "    for key, value in datedict.items():\n",
     "        if value != 0:\n",
     "            notify(key, value)\n",
     "\n",
+    "#read api key & setup client\n",
     "with open(\"slackapi.txt\", \"r\") as file:\n",
     "    secret = file.read()\n",
     "sc = slack.WebClient(secret)\n",
     "\n",
+    "#read user ids\n", 
     "with open(\"slackIds.json\", \"r\") as file:\n",
     "    ids = json.load(file)\n",
     "\n",
+    "#convert and parse spreadsheet\n",
     "oglink = 'INSERT LINK HERE'\n",
     "split_og = oglink.split('/')\n",
     "new_link = ''\n",
@@ -45,11 +51,13 @@
     "df1 = df1.set_index('Exec')\n",
     "df1.columns = pd.to_datetime(df1.columns, format='%m/%d/%Y') + timedelta(hours=21)\n",
     "\n",
+    "#run this system for the entire promo schedule\n",
     "zero = datetime.timedelta(0)\n",
     "i = 0\n",
     "while i<len(df1.columns):\n",
     "    diff = df1.columns[i].to_pydatetime()-date.today()\n",
     "    if diff >= zero:\n",
+    "        #wait until next promo day at 9pm to notify the user\n",
     "        time.sleep(diff.total_seconds())\n",
     "        who_to_notif(df1, df1.columns[i])\n",
     "    i += 1"
