make filenames changeable

--- a/promoNotifs.ipynb
+++ b/promoNotifs.ipynb
@@ -29,17 +29,21 @@
     "        if value != 0:\n",
     "            notify(key, value)\n",
     "\n",
+    "#filenames and google sheet link to read\n",
+    "apiFile = 'FILE.txt'\n",
+    "idFile = 'FILE.json'\n",
+    "oglink = 'INSERT LINK HERE'
+    "\n",
     "#read api key & setup client\n",
-    "with open(\"slackapi.txt\", \"r\") as file:\n",
+    "with open(\"apiFile\", \"r\") as file:\n",
     "    secret = file.read()\n",
     "sc = slack.WebClient(secret)\n",
     "\n",
     "#read user ids\n", 
-    "with open(\"slackIds.json\", \"r\") as file:\n",
+    "with open(\"idFile\", \"r\") as file:\n",
     "    ids = json.load(file)\n",
     "\n",
     "#convert and parse spreadsheet\n",
-    "oglink = 'INSERT LINK HERE'\n",
     "split_og = oglink.split('/')\n",
     "new_link = ''\n",
     "for i in range (0,6):\n",
