new loadable file with all previous changes

--- a/promoNotifs.ipynb
+++ b/promoNotifs.ipynb
@@ -13,7 +13,7 @@
     "import json\n",
     "\n",
     "#uses slack to tag users and notify them of their promo task\n",
-    "#key = user, value = task\n", 
+    "#key = user, value = task\n",
     "def notify(key, value):\n",
     "    user = ids[key]\n",
     "    response = sc.chat_postMessage(\n",
@@ -21,7 +21,7 @@
     "        text='Hey <@' + user + '>, please promo: ' + value + '!')\n",
     "    assert response[\"ok\"]\n",
     "    assert response[\"message\"][\"text\"] == 'Hey <@' + user + '>, please promo: ' + value + '!'\n",
-    "    \n",
+    "\n",
     "#for users who have tasks on date, call notify\n",
     "def who_to_notif(df, date):\n",
     "    datedict = df.loc[:,date].to_dict()\n",
@@ -30,25 +30,24 @@
     "            notify(key, value)\n",
     "\n",
     "#filenames and google sheet link to read\n",
-    "apiFile = 'FILE.txt'\n",
-    "idFile = 'FILE.json'\n",
-    "oglink = 'INSERT LINK HERE'
-    "\n",
+    "apiFile = \"FILE.txt\"\n",
+    "idFile = \"FILE.json\"\n",
+    "oglink = 'INSERT LINK HERE'\n",
+    "            \n",
     "#read api key & setup client\n",
-    "with open(\"apiFile\", \"r\") as file:\n",
+    "with open(apiFile, \"r\") as file:\n",
     "    secret = file.read()\n",
     "sc = slack.WebClient(secret)\n",
     "\n",
-    "#read user ids\n", 
-    "with open(\"idFile\", \"r\") as file:\n",
+    "#read user ids\n",
+    "with open(idFile, \"r\") as file:\n",
     "    ids = json.load(file)\n",
     "\n",
     "#convert and parse spreadsheet\n",
     "split_og = oglink.split('/')\n",
     "new_link = ''\n",
     "for i in range (0,6):\n",
-    "    new_link += split_og[i] + '/'\n",
-    "    \n",
+    "    new_link += split_og[i] + '/' \n",
     "df = pd.read_csv( new_link + 'export?gid=0&format=csv', parse_dates=True)\n",
     "df.drop(df.columns[[1]], axis=1, inplace=True)\n",
     "df1 = df.fillna(0)\n",
